--- a/putninalozi/templates/company.html
+++ b/putninalozi/templates/company.html
@@ -1,185 +1,185 @@
 {% extends "layout.html" %} {% block content %}
 <div class="media">
-  <img class="rounded-circle account-img" src="{{ image_file }}" />
-  <div class="media-body">
-    <h2 class="account-heading">{{ company.companyname }}</h2>
-    <p class="text-secondary text-muted">
-        {{ company.company_address }} {{ company.company_address_number }}, {{company.company_city }}
-    </p>
-  </div>
+    <img class="rounded-circle account-img" src="{{ image_file }}" style="width: 64px; height: 64px;" />
+    <div class="media-body">
+        <h2 class="account-heading">{{ company.companyname }}</h2>
+        <p class="text-secondary text-muted">
+            {{ company.company_address }} {{ company.company_address_number }}, {{company.company_city }}
+        </p>
+    </div>
 </div>
 <div class="content-section">
-  <form method="POST" action="" enctype="multipart/form-data">
-    {{ form.hidden_tag() }}
-    <fieldset class="form-group">
-      <legend class="border-bottom mb-4">{{ legend }}</legend>
-      <div class="row just-column">
-        <div class="col form-group">
-            {{ form.companyname.label(class="form-control-label") }} 
-            {% if form.companyname.errors %} 
-                {{ form.companyname(class="form-control form-control-lg is-invalid") }}
+    <form method="POST" action="" enctype="multipart/form-data">
+        {{ form.hidden_tag() }}
+        <fieldset class="form-group">
+        <legend class="border-bottom mb-4">{{ legend }}</legend>
+        <div class="row just-column">
+            <div class="col form-group">
+                {{ form.companyname.label(class="form-control-label") }} 
+                {% if form.companyname.errors %} 
+                    {{ form.companyname(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.companyname.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %} 
+                    {{ form.companyname(class="form-control form-control-lg") }} 
+                {% endif %}
+            </div>
+            <div class="col form-group">
+                {{ form.company_logo.label() }} {{ form.company_logo(class="form-control-file") }} 
+                {% if form.company_logo.errors %} 
+                {% for error in form.company_logo.errors %}
+                    <span class="text-danger">{{ error }}</span>
+                {% endfor %} 
+                {% endif %}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col form-group">
+            {{ form.company_address.label(class="form-control-label") }} 
+            {% if form.company_address.errors %} 
+                {{ form.company_address(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
-                    {% for error in form.companyname.errors %}
+                    {% for error in form.company_address.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+            {% else %} 
+                {{ form.company_address(class="form-control form-control-lg") }} 
+            {% endif %}
+            </div>
+            <div class="col form-group">
+            {{ form.company_address_number.label(class="form-control-label") }} 
+            {% if form.company_address_number.errors %} 
+                {{ form.company_address_number(class="form-control form-control-lg is-invalid") }}
+                <div class="invalid-feedback">
+                    {% for error in form.company_address_number.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+            {% else %} 
+                {{ form.company_address_number(class="form-control form-control-lg") }} 
+            {% endif %}
+            </div>
+        </div>
+        <div class="row just-column">
+            <div class="col form-group">
+                {{ form.company_zip_code.label(class="form-control-label") }} 
+                {% if form.company_zip_code.errors %} 
+                    {{ form.company_zip_code(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.company_zip_code.errors %}
                         <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-            {% else %} 
-                {{ form.companyname(class="form-control form-control-lg") }} 
-            {% endif %}
-        </div>
-        <div class="col form-group">
-            {{ form.company_logo.label() }} {{ form.company_logo(class="form-control-file") }} 
-            {% if form.company_logo.errors %} 
-            {% for error in form.company_logo.errors %}
-                <span class="text-danger">{{ error }}</span>
-            {% endfor %} 
-            {% endif %}
-        </div>
-      </div>
-      <div class="row">
-        <div class="col form-group">
-          {{ form.company_address.label(class="form-control-label") }} 
-          {% if form.company_address.errors %} 
-            {{ form.company_address(class="form-control form-control-lg is-invalid") }}
-            <div class="invalid-feedback">
-                {% for error in form.company_address.errors %}
-                <span>{{ error }}</span>
-                {% endfor %}
+                        {% endfor %}
+                    </div>
+                {% else %} 
+                    {{ form.company_zip_code(class="form-control form-control-lg") }} 
+                {% endif %}
             </div>
-          {% else %} 
-            {{ form.company_address(class="form-control form-control-lg") }} 
-          {% endif %}
-        </div>
-        <div class="col form-group">
-          {{ form.company_address_number.label(class="form-control-label") }} 
-          {% if form.company_address_number.errors %} 
-            {{ form.company_address_number(class="form-control form-control-lg is-invalid") }}
-            <div class="invalid-feedback">
-                {% for error in form.company_address_number.errors %}
-                <span>{{ error }}</span>
-                {% endfor %}
+            <div class="col form-group">
+                {{ form.company_city.label(class="form-control-label") }} 
+                {% if form.company_city.errors %} 
+                    {{ form.company_city(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.company_city.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %} 
+                    {{ form.company_city(class="form-control form-control-lg") }} 
+                {% endif %}
             </div>
-          {% else %} 
-            {{ form.company_address_number(class="form-control form-control-lg") }} 
-          {% endif %}
+            <div class="col form-group">
+                {{ form.company_state.label(class="form-control-label") }} 
+                {% if form.company_state.errors %} 
+                    {{ form.company_state(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.company_state.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %} 
+                    {{ form.company_state(class="form-control form-control-lg") }} 
+                {% endif %}
+            </div>
         </div>
-      </div>
-      <div class="row just-column">
-        <div class="col form-group">
-            {{ form.company_zip_code.label(class="form-control-label") }} 
-            {% if form.company_zip_code.errors %} 
-                {{ form.company_zip_code(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.company_zip_code.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-            {% else %} 
-                {{ form.company_zip_code(class="form-control form-control-lg") }} 
-            {% endif %}
+        <div class="row just-column">
+            <div class="col form-group">
+                {{ form.company_site.label(class="form-control-label") }} 
+                {% if form.company_site.errors %} 
+                    {{ form.company_site(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.company_site.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %} 
+                    {{ form.company_site(class="form-control form-control-lg") }} 
+                {% endif %}
+            </div>
+            <div class="col form-group">
+                {{ form.company_mail.label(class="form-control-label") }} 
+                {% if form.company_mail.errors %} 
+                    {{ form.company_mail(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.company_mail.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %} 
+                    {{ form.company_mail(class="form-control form-control-lg") }} 
+                {% endif %}
+            </div>
+            <div class="col form-group">
+                {{ form.company_phone.label(class="form-control-label") }} 
+                {% if form.company_phone.errors %} 
+                    {{ form.company_phone(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.company_phone.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %} 
+                    {{ form.company_phone(class="form-control form-control-lg") }} 
+                {% endif %}
+            </div>
         </div>
-        <div class="col form-group">
-            {{ form.company_city.label(class="form-control-label") }} 
-            {% if form.company_city.errors %} 
-                {{ form.company_city(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.company_city.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-            {% else %} 
-                {{ form.company_city(class="form-control form-control-lg") }} 
-            {% endif %}
+        <div class="row">
+            <div class="col form-group">
+                {{ form.company_pib.label(class="form-control-label") }} 
+                {% if form.company_pib.errors %} 
+                    {{ form.company_pib(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.company_pib.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %} 
+                    {{ form.company_pib(class="form-control form-control-lg") }} 
+                {% endif %}
+            </div>
+            <div class="col form-group">
+                {{ form.company_mb.label(class="form-control-label") }} 
+                {% if form.company_mb.errors %} 
+                    {{ form.company_mb(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.company_mb.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %} 
+                    {{ form.company_mb(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
         </div>
-        <div class="col form-group">
-            {{ form.company_state.label(class="form-control-label") }} 
-            {% if form.company_state.errors %} 
-                {{ form.company_state(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.company_state.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-            {% else %} 
-                {{ form.company_state(class="form-control form-control-lg") }} 
-            {% endif %}
+        </fieldset>
+        <div class="form-group">
+            <a class="btn btn-info" href="{{url_for('companys.company_list')}}">Nazad</a>
+            {{ form.submit(class="btn btn-outline-info") }}
         </div>
-      </div>
-      <div class="row just-column">
-        <div class="col form-group">
-            {{ form.company_site.label(class="form-control-label") }} 
-            {% if form.company_site.errors %} 
-                {{ form.company_site(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.company_site.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-            {% else %} 
-                {{ form.company_site(class="form-control form-control-lg") }} 
-            {% endif %}
-        </div>
-        <div class="col form-group">
-            {{ form.company_mail.label(class="form-control-label") }} 
-            {% if form.company_mail.errors %} 
-                {{ form.company_mail(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.company_mail.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-            {% else %} 
-                {{ form.company_mail(class="form-control form-control-lg") }} 
-            {% endif %}
-        </div>
-        <div class="col form-group">
-            {{ form.company_phone.label(class="form-control-label") }} 
-            {% if form.company_phone.errors %} 
-                {{ form.company_phone(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.company_phone.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-            {% else %} 
-                {{ form.company_phone(class="form-control form-control-lg") }} 
-            {% endif %}
-        </div>
-      </div>
-      <div class="row">
-        <div class="col form-group">
-            {{ form.company_pib.label(class="form-control-label") }} 
-            {% if form.company_pib.errors %} 
-                {{ form.company_pib(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.company_pib.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-            {% else %} 
-                {{ form.company_pib(class="form-control form-control-lg") }} 
-            {% endif %}
-        </div>
-        <div class="col form-group">
-            {{ form.company_mb.label(class="form-control-label") }} 
-            {% if form.company_mb.errors %} 
-                {{ form.company_mb(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.company_mb.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-            {% else %} 
-                {{ form.company_mb(class="form-control form-control-lg") }}
-            {% endif %}
-        </div>
-      </div>
-    </fieldset>
-    <div class="form-group">
-        <a class="btn btn-info" href="{{url_for('companys.company_list')}}">Nazad</a>
-        {{ form.submit(class="btn btn-outline-info") }}
-    </div>
-  </form>
+    </form>
 </div>
 <script>document.body.classList.add('company');</script>
 {% endblock content%}
